src/test/ui/suggestions/suggest-impl-trait-lifetime.stderr
error[E0310]: the parameter type `impl Debug` may not live long enough
  --> $DIR/suggest-impl-trait-lifetime.rs:7:5
   |
LL | fn foo(d: impl Debug) {
   |           ---------- help: consider adding an explicit lifetime bound...: `impl Debug + 'static`
LL |
LL |     bar(d);
   |     ^^^
   |
note: ...so that the type `impl Debug` will meet its required lifetime bounds
  --> $DIR/suggest-impl-trait-lifetime.rs:7:5
   |
LL |     bar(d);
   |     ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
